--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <!-- This site was created with Hugo Blox. https://hugoblox.com -->
-<!-- Last Published: May 21, 2024 --><html lang="en-us" dir="ltr"
+<!-- Last Published: May 22, 2024 --><html lang="en-us" dir="ltr"
       data-wc-theme-default="system">
   
 <head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=3488&amp;path=livereload" data-no-instant defer></script>
@@ -872,8 +872,8 @@
 
 
 
-<section id="section-resume-biography-3" class="relative hbb-section blox-resume-biography-3  light" style="padding: 4rem 0 4rem 0;" >
- <div class="home-section-bg  bg-image" style="background-color: black;background-image: url(&#39;http://localhost:3488/media/stacked-peaks.svg&#39;);background-size: cover;background-position: center;filter: brightness(1);">
+<section id="section-resume-biography-3" class="relative hbb-section blox-resume-biography-3  light" style="padding: 6rem 0 6rem 0;" >
+ <div class="home-section-bg  bg-image" style="background-color: white;background-image: url(&#39;http://localhost:3488/media/stacked-peaks.svg&#39;);background-size: cover;background-position: center;filter: brightness(1);">
    
  </div>
   
@@ -1230,7 +1230,7 @@
 
 
 
-<section id="section-markdown" class="relative hbb-section blox-markdown  " style="padding: 4rem 0 4rem 0;" >
+<section id="section-markdown" class="relative hbb-section blox-markdown  " style="padding: 6rem 0 6rem 0;" >
  <div class="home-section-bg " >
    
  </div>
@@ -1350,7 +1350,7 @@
 
 
 
-<section id="papers" class="relative hbb-section blox-collection  " style="padding: 4rem 0 4rem 0;" >
+<section id="papers" class="relative hbb-section blox-collection  " style="padding: 6rem 0 6rem 0;" >
  <div class="home-section-bg " >
    
  </div>
@@ -1601,7 +1601,7 @@
 
 
 
-<section id="section-collection" class="relative hbb-section blox-collection  " style="padding: 4rem 0 4rem 0;" >
+<section id="section-collection" class="relative hbb-section blox-collection  " style="padding: 6rem 0 6rem 0;" >
  <div class="home-section-bg " >
    
  </div>
@@ -1872,7 +1872,7 @@
 
 
 
-<section id="talks" class="relative hbb-section blox-collection  " style="padding: 4rem 0 4rem 0;" >
+<section id="talks" class="relative hbb-section blox-collection  " style="padding: 6rem 0 6rem 0;" >
  <div class="home-section-bg " >
    
  </div>
