--- a/public/index.html
+++ b/public/index.html
@@ -1833,7 +1833,7 @@
 
 
 
-<section id="talks" class="relative hbb-section blox-collection  " style="padding: 6rem 0 6rem 0;" >
+<section id="events" class="relative hbb-section blox-collection  " style="padding: 6rem 0 6rem 0;" >
  <div class="home-section-bg " >
    
  </div>
@@ -1913,7 +1913,7 @@
 
 
 <div class="container px-8 mx-auto xl:px-5 py-5 lg:py-8 max-w-screen-lg ">
-  <div class="grid gap-10 md:grid-cols-1 lg:gap-10">
+  <div class="grid gap-10 md:grid-cols-2 lg:gap-10">
 
 
   
