--- a/public/404.html
+++ b/public/404.html
@@ -688,7 +688,7 @@
         <a
           class="nav-link "
           
-          href="/#papers"
+          href="/publication/"
         >Publications</a
         >
       </li>
