--- a/public/index.html
+++ b/public/index.html
@@ -700,7 +700,7 @@
         <a
           class="nav-link "
           
-          href="/#papers"
+          href="/publication/"
         >Publications</a
         >
       </li>
