--- a/public/publication/index.html
+++ b/public/publication/index.html
@@ -690,9 +690,9 @@
       
       <li class="nav-item">
         <a
-          class="nav-link "
+          class="nav-link active"
           
-          href="/#papers"
+          href="/publication/"
         >Publications</a
         >
       </li>
