--- a/public/events/siam-conference-on-nonlinear-waves-and-coherent/index.html
+++ b/public/events/siam-conference-on-nonlinear-waves-and-coherent/index.html
@@ -695,7 +695,7 @@
         <a
           class="nav-link "
           
-          href="/#papers"
+          href="/publication/"
         >Publications</a
         >
       </li>
