--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <!-- This site was created with Hugo Blox. https://hugoblox.com -->
-<!-- Last Published: May 22, 2024 --><html lang="en-us" dir="ltr"
+<!-- Last Published: May 23, 2024 --><html lang="en-us" dir="ltr"
       data-wc-theme-default="system">
   
 <head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=3488&amp;path=livereload" data-no-instant defer></script>
@@ -873,7 +873,7 @@
 
 
 <section id="section-resume-biography-3" class="relative hbb-section blox-resume-biography-3  light" style="padding: 6rem 0 6rem 0;" >
- <div class="home-section-bg  bg-image" style="background-color: white;background-image: url(&#39;http://localhost:3488/media/stacked-peaks.svg&#39;);background-size: cover;background-position: center;filter: brightness(1);">
+ <div class="home-section-bg  bg-image" style="background-color: auto;background-image: url(&#39;http://localhost:3488/media/stacked-peaks.svg&#39;);background-size: cover;background-position: center;filter: brightness(1);">
    
  </div>
   
