--- a/public/index.html
+++ b/public/index.html
@@ -872,7 +872,7 @@
 
 
 
-<section id="section-resume-biography-3" class="relative hbb-section blox-resume-biography-3  light" style="padding: 6rem 0 6rem 0;" >
+<section id="section-resume-biography-3" class="relative hbb-section blox-resume-biography-3  auto" style="padding: 6rem 0 6rem 0;" >
  <div class="home-section-bg  bg-image" style="background-color: auto;background-image: url(&#39;http://localhost:3488/media/stacked-peaks.svg&#39;);background-size: cover;background-position: center;filter: brightness(1);">
    
  </div>
