--- a/public/events/siam-conference-on-nonlinear-waves-and-coherent/index.html
+++ b/public/events/siam-conference-on-nonlinear-waves-and-coherent/index.html
@@ -1244,7 +1244,7 @@
 
     
     <div class="text-sm font-bold text-neutral-700 dark:text-neutral-300">
-    Research Assistant
+    Research Assistant, <a href="https://math.njit.edu/" target="_blank" rel="noopener">Department of Mathematical Sciences</a>
     </div>
     
 
