--- a/public/index.html
+++ b/public/index.html
@@ -901,7 +901,7 @@
 
       <div class="text-3xl font-bold mb-2 mt-6">Atul Anurag</div>
 
-      <h3 class="font-semibold mb-1">Research Assistant</h3>
+      <h3 class="font-semibold mb-1">Research Assistant, <a href="https://math.njit.edu/" target="_blank" rel="noopener">Department of Mathematical Sciences</a></h3>
 
       
       <div class="mb-2">
