--- a/public/publication/index.html
+++ b/public/publication/index.html
@@ -768,7 +768,7 @@
 <span class="pr-3 pt-1 text-primary-600 dark:text-primary-300">
   <svg height="24" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="m11.25 11.25l.041-.02a.75.75 0 0 1 1.063.852l-.708 2.836a.75.75 0 0 0 1.063.853l.041-.021M21 12a9 9 0 1 1-18 0a9 9 0 0 1 18 0m-9-3.75h.008v.008H12z"/></svg>
 </span>
-  <span class="dark:text-neutral-300">Quickly discover relevant papers by filtering or searching.</span>
+  <span class="dark:text-neutral-300"></span>
 </div>
   </article>
 </div>
