--- a/public/teaching/math-111/past-exams/index.html
+++ b/public/teaching/math-111/past-exams/index.html
@@ -630,7 +630,8 @@
   <article class="prose prose-slate lg:prose-xl dark:prose-invert">
     <h1 class="lg:text-6xl">Past Exams</h1>
     <h2 id="course-description">Course Description</h2>
-<p>My solutions to the previous exams on Calculus I can be found here:</p>
+<p>My solutions to the previous exams on Calculus I can be found here:
+url_pdf:</p>
 
   </article>
 </div>
