--- a/public/teaching/math-111/index.html
+++ b/public/teaching/math-111/index.html
@@ -659,7 +659,7 @@
     <div class="p-8">
       <div class="uppercase tracking-wide text-md text-primary-700 dark:text-primary-200 font-semibold">Past Exams</div>
       <p class="block mt-1 text-sm leading-tight font-medium text-black dark:text-white">
-        Course Description My solutions to the previous exams on Calculus I can be found here:</p>
+        Course Description My solutions to the previous exams on Calculus I can be found here: url_pdf:</p>
       <p class="mt-2 text-gray-500 dark:text-gray-400 text-sm">Jan 1, 0001</p>
     </div>
   </div>
