--- a/public/events/index.html
+++ b/public/events/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <!-- This site was created with Hugo Blox. https://hugoblox.com -->
-<!-- Last Published: June 3, 2024 --><html lang="en-us" dir="ltr"
+<!-- Last Published: June 4, 2024 --><html lang="en-us" dir="ltr"
       data-wc-theme-default="system">
   
 <head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=3488&amp;path=livereload" data-no-instant defer></script>
@@ -631,7 +631,9 @@
 <div class="max-w-prose mx-auto flex justify-center">
   <article class="prose prose-slate lg:prose-xl dark:prose-invert">
     <h1 class="lg:text-6xl">Recent &amp; Upcoming Talks</h1>
-    
+    <h2 id="-talks">tags:
+-Talks</h2>
+
   </article>
 </div>
 
