--- a/public/index.html
+++ b/public/index.html
@@ -516,9 +516,9 @@
       
       <li class="nav-item">
         <a
-          class="nav-link active"
+          class="nav-link "
           
-          href="/"
+          href="/about"
         >Home</a
         >
       </li>
