--- a/public/teaching/math-111/index.html
+++ b/public/teaching/math-111/index.html
@@ -501,7 +501,7 @@
         <a
           class="nav-link "
           
-          href="/"
+          href="/about"
         >Home</a
         >
       </li>
