--- a/public/teaching/math-111/past-exams/index.html
+++ b/public/teaching/math-111/past-exams/index.html
@@ -502,7 +502,7 @@
         <a
           class="nav-link "
           
-          href="/"
+          href="/about"
         >Home</a
         >
       </li>
