--- a/public/events/index.html
+++ b/public/events/index.html
@@ -358,6 +358,7 @@
   
   
   
+  
 
 
 
@@ -696,6 +697,30 @@
       <p class="block mt-1 text-sm leading-tight font-medium text-black dark:text-white">
         </p>
       <p class="mt-2 text-gray-500 dark:text-gray-400 text-sm">Oct 20, 2023</p>
+    </div>
+  </div>
+</a>
+
+  
+  
+
+
+
+
+
+
+
+
+<a href="/events/njit-math-summer-talk-2023/"  class="mb-5">
+  <div class="md:flex">
+    <div class="md:flex-shrink-0 overflow-hidden">
+      
+    </div>
+    <div class="p-8">
+      <div class="uppercase tracking-wide text-md text-primary-700 dark:text-primary-200 font-semibold">Generalization of Leapfrogging Orbits of Point Vortices</div>
+      <p class="block mt-1 text-sm leading-tight font-medium text-black dark:text-white">
+        </p>
+      <p class="mt-2 text-gray-500 dark:text-gray-400 text-sm">Jul 20, 2023</p>
     </div>
   </div>
 </a>
