--- a/public/events/njit-math-summer-talk-2023/index.html
+++ b/public/events/njit-math-summer-talk-2023/index.html
@@ -962,7 +962,7 @@
       <div class="article-header article-container featured-image-wrapper mt-4 mb-16" style="max-width: 720px; max-height: 248px;">
         <div style="position: relative">
           <img src="/events/njit-math-summer-talk-2023/featured_hudc4611d6a615afb07b5d5cac843b1721_436355_e94ece5f794fc76a37e5fde4cb7e8bcf.webp" width="720" height="248" alt="" class="featured-image">
-          <span class="article-header-caption">Image credit: <a href="https://math.njit.edu/2023-faculty-and-student-summer-talks" target="_blank" rel="noopener"><strong>NJIT</strong></a></span>
+          <span class="article-header-caption">Image credit: <a href="https://roygoodman.net" target="_blank" rel="noopener"><strong>ROY</strong></a></span>
         </div>
       </div>
       
