--- a/public/index.html
+++ b/public/index.html
@@ -1897,6 +1897,26 @@
 <div class="group cursor-pointer">
 
   
+  
+  
+    
+  
+  
+  <div class="overflow-hidden rounded-md bg-gray-100 transition-all hover:scale-105 dark:bg-gray-800">
+
+    <a
+      class="relative block aspect-video"
+      href="/post/time-of-ifs-and-buts/" >
+
+      <img alt="Time of IFs and BUTs"
+           class="object-fill transition-all"
+           data-nimg="fill"
+           decoding="async"
+           fetchpriority="high" height="540" loading="lazy" src="/post/time-of-ifs-and-buts/featured.jpg_hu2dfe028d9a9f698a213c65f1c4da6d55_125312_6bada0267ab9de2026e2334da4a8db7b.webp"
+           style="position: absolute; height: 100%; width: 100%; inset: 0px; color: transparent;"
+           width="960"></a>
+  </div>
+  
   <div class="">
     <div class="">
       <div class="flex gap-3">
