--- a/public/index.html
+++ b/public/index.html
@@ -1934,7 +1934,7 @@
       
       <div class="grow"><p class="mt-2 line-clamp-3 text-sm text-gray-500 dark:text-gray-400"><a
         href="/post/time-of-ifs-and-buts/" >
-        Love is Eternal!</a></p>
+        Time I am, the great destroyer of the worlds!</a></p>
       </div>
       <div class="flex-none">
         <div class="mt-3 flex items-center space-x-3 text-gray-500 dark:text-gray-400 cursor-default">
