--- a/public/publication/vortex-dipole/index.html
+++ b/public/publication/vortex-dipole/index.html
@@ -1143,6 +1143,10 @@
 
 
 
+<a class="hb-attachment-link hb-attachment-large" href="https://doi.org/https://doi.org/10.1063/5.0208538" target="_blank" rel="noopener">
+  DOI
+</a>
+
 
   
   
