--- a/public/404.html
+++ b/public/404.html
@@ -706,7 +706,7 @@
         <a
           class="nav-link "
           
-          href="/contact/"
+          href="#contact"
         >Contact</a
         >
       </li>
