--- a/public/publication/vortex-dipole/index.html
+++ b/public/publication/vortex-dipole/index.html
@@ -758,7 +758,7 @@
         <a
           class="nav-link "
           
-          href="/contact/"
+          href="#contact"
         >Contact</a
         >
       </li>
