--- a/public/teaching/math-111/index.html
+++ b/public/teaching/math-111/index.html
@@ -707,7 +707,7 @@
         <a
           class="nav-link "
           
-          href="/contact/"
+          href="#contact"
         >Contact</a
         >
       </li>
