--- a/public/teaching/math-111/index.html
+++ b/public/teaching/math-111/index.html
@@ -779,6 +779,8 @@
   <article class="prose prose-slate lg:prose-xl dark:prose-invert">
     <h1 class="lg:text-6xl">Math 111 Calculus I</h1>
     <h2 id="course-description">Course Description</h2>
+<p>My solutions to the previous exams on Calculus I can be found here:
+url_pdf: &ldquo;MATH-111&rdquo;</p>
 
   </article>
 </div>
