--- a/public/teaching/math-112/index.html
+++ b/public/teaching/math-112/index.html
@@ -783,7 +783,7 @@
     <h2 id="course-description">Course Description</h2>
 <p>My solutions to the previous exams on Calculus II can be found here: <a href="CalculusII.pdf">Calculus II</a>.</p>
 <p>As a recitation leader, I used to assign practice problems every week, which can be found below.<br /></p>
-<p>[Practice Set I](Problem Set I.pdf).</p>
+<p><a href="Problem-Set-I.pdf">Practice Set I</a>.</p>
 
   </article>
 </div>
