--- a/public/teaching/math-112/index.html
+++ b/public/teaching/math-112/index.html
@@ -785,6 +785,20 @@
 <p>As a recitation leader, I used to assign practice problems every week, which can be found below.<br /></p>
 <p align="center"><b>Week I</b></p>
 <p><a href="Problem-Set-I.pdf">Practice Set I</a>.</p>
+<p align="center"><b>Week II</b></p>
+<p><a href="Problem-Set-I.pdf">Practice Set I</a>.</p>
+<p align="center"><b>Week III</b></p>
+<p><a href="Problem-Set-I.pdf">Practice Set I</a>.</p>
+<p align="center"><b>Week IV</b></p>
+<p><a href="Problem-Set-I.pdf">Practice Set I</a>.</p>
+<p align="center"><b>Week V</b></p>
+<p><a href="Problem-Set-I.pdf">Practice Set I</a>.</p>
+<p align="center"><b>Week VI</b></p>
+<p><a href="Problem-Set-I.pdf">Practice Set I</a>.</p>
+<p align="center"><b>Week VII</b></p>
+<p><a href="Problem-Set-I.pdf">Practice Set I</a>.</p>
+<p align="center"><b>Week VIII</b></p>
+<p><a href="Problem-Set-I.pdf">Practice Set I</a>.</p>
 
   </article>
 </div>
