--- a/public/teaching/math-112/index.html
+++ b/public/teaching/math-112/index.html
@@ -786,19 +786,19 @@
 <p align="center"><b>Week I</b></p>
 <p><a href="Problem-Set-I.pdf">Practice Set I</a>.</p>
 <p align="center"><b>Week II</b></p>
-<p><a href="Problem-Set-I.pdf">Practice Set I</a>.</p>
+<p><a href="Problem-Set-II.pdf">Practice Set II</a>.</p>
 <p align="center"><b>Week III</b></p>
-<p><a href="Problem-Set-I.pdf">Practice Set I</a>.</p>
+<p><a href="Problem-Set-III.pdf">Practice Set III</a>.</p>
 <p align="center"><b>Week IV</b></p>
-<p><a href="Problem-Set-I.pdf">Practice Set I</a>.</p>
+<p><a href="Problem-Set-IV.pdf">Practice Set IV</a>.</p>
 <p align="center"><b>Week V</b></p>
-<p><a href="Problem-Set-I.pdf">Practice Set I</a>.</p>
+<p><a href="Problem-Set-V.pdf">Practice Set V</a>.</p>
 <p align="center"><b>Week VI</b></p>
-<p><a href="Problem-Set-I.pdf">Practice Set I</a>.</p>
+<p><a href="Problem-Set-VI.pdf">Practice Set VI</a>.</p>
 <p align="center"><b>Week VII</b></p>
-<p><a href="Problem-Set-I.pdf">Practice Set I</a>.</p>
+<p><a href="Problem-Set-VII.pdf">Practice Set VII</a>.</p>
 <p align="center"><b>Week VIII</b></p>
-<p><a href="Problem-Set-I.pdf">Practice Set I</a>.</p>
+<p><a href="Problem-Set-VIII.pdf">Practice Set VII</a>.</p>
 
   </article>
 </div>
