--- a/public/index.html
+++ b/public/index.html
@@ -724,7 +724,7 @@
         <a
           class="nav-link "
           
-          href="#contact"
+          href="/contact/"
         >Contact</a
         >
       </li>
