--- a/public/publication/vortex-dipole/index.html
+++ b/public/publication/vortex-dipole/index.html
@@ -716,7 +716,7 @@
         <a
           class="nav-link "
           
-          href="/post/"
+          href="#post"
         >Blog</a
         >
       </li>
