--- a/public/index.html
+++ b/public/index.html
@@ -682,7 +682,7 @@
         <a
           class="nav-link "
           
-          href="/post/"
+          href="#post"
         >Blog</a
         >
       </li>
