--- a/public/teaching/math-112/index.html
+++ b/public/teaching/math-112/index.html
@@ -667,7 +667,7 @@
         <a
           class="nav-link "
           
-          href="/post/"
+          href="#post"
         >Blog</a
         >
       </li>
