--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -780,7 +780,8 @@
 <div class="max-w-prose mx-auto flex justify-center">
   <article class="prose prose-slate lg:prose-xl dark:prose-invert">
     <h1 class="lg:text-6xl">Contact</h1>
-    
+    <p>Hello everyone</p>
+
   </article>
 </div>
 
