--- a/public/404.html
+++ b/public/404.html
@@ -665,7 +665,7 @@
         <a
           class="nav-link "
           
-          href="#post"
+          href="/post/"
         >Blog</a
         >
       </li>
@@ -707,7 +707,7 @@
         <a
           class="nav-link "
           
-          href="#contact"
+          href="/contact/"
         >Contact</a
         >
       </li>
