--- a/public/publication/vortex-dipole/index.html
+++ b/public/publication/vortex-dipole/index.html
@@ -717,7 +717,7 @@
         <a
           class="nav-link "
           
-          href="#post"
+          href="/post/"
         >Blog</a
         >
       </li>
@@ -759,7 +759,7 @@
         <a
           class="nav-link "
           
-          href="#contact"
+          href="/contact/"
         >Contact</a
         >
       </li>
