--- a/public/index.html
+++ b/public/index.html
@@ -374,6 +374,7 @@
   
   
   
+  
 
 
 
@@ -682,7 +683,7 @@
         <a
           class="nav-link "
           
-          href="#post"
+          href="/post/"
         >Blog</a
         >
       </li>
@@ -724,7 +725,7 @@
         <a
           class="nav-link "
           
-          href="#contact"
+          href="/contact/"
         >Contact</a
         >
       </li>
