--- a/public/teaching/math-112/index.html
+++ b/public/teaching/math-112/index.html
@@ -359,6 +359,7 @@
   
   
   
+  
 
 
 
@@ -667,7 +668,7 @@
         <a
           class="nav-link "
           
-          href="#post"
+          href="/post/"
         >Blog</a
         >
       </li>
@@ -709,7 +710,7 @@
         <a
           class="nav-link "
           
-          href="#contact"
+          href="/contact/"
         >Contact</a
         >
       </li>
