--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -780,8 +780,9 @@
 <div class="max-w-prose mx-auto flex justify-center">
   <article class="prose prose-slate lg:prose-xl dark:prose-invert">
     <h1 class="lg:text-6xl">Contact</h1>
-    <p>You can reach out via email. Here are my emails:
-<a href="mailto:aa2894@njit.edu">Work Email</a></p>
+    <p>You can reach out via email. Here are my emails:<br /></p>
+<p><a href="mailto:aa2894@njit.edu">Work Email</a><br /></p>
+<p><a href="mailto:aatulanurag@gmail.com">Personal Email</a></p>
 
   </article>
 </div>
