--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -783,6 +783,7 @@
     <p>You can reach out via email. Here are my emails:<br /></p>
 <p><a href="mailto:aa2894@njit.edu">Work Email</a><br /></p>
 <p><a href="mailto:aatulanurag@gmail.com">Personal Email</a></p>
+<p align="center"><b>Office Location</b></p> 
 
   </article>
 </div>
