--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -784,6 +784,10 @@
 <p><a href="mailto:aa2894@njit.edu">Work Email</a><br /></p>
 <p><a href="mailto:aatulanurag@gmail.com">Personal Email</a></p>
 <p align="center"><b>Office Location</b></p> 
+<p><a href="https://archlib.njit.edu/cullimore-hall" target="_blank" rel="noopener">New Jersey Institute of Technology</a>, Office 105,<br />
+Cullimore Hall,<br />
+323 M.L.K. Boulevard, University Heights,<br />
+Newark, New Jersey 07102 USA</p>
 
   </article>
 </div>
