--- a/public/publication/vortex-dipole/index.html
+++ b/public/publication/vortex-dipole/index.html
@@ -1444,6 +1444,8 @@
 
 
     
+    <div class="text-sm text-neutral-700 dark:text-neutral-300">Atul Anurag is a Research Assistant in the Department of Mathematical Sciences at the New Jersey Institute of Technology.</div>
+    
 
     <div class="text-2xl sm:text-lg pt-1">
 
