--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <!-- This site was created with Hugo Blox. https://hugoblox.com -->
-<!-- Last Published: June 14, 2024 --><html lang="en-us" dir="ltr"
+<!-- Last Published: June 15, 2024 --><html lang="en-us" dir="ltr"
       data-wc-theme-default="system">
   
 <head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=3488&amp;path=livereload" data-no-instant defer></script>
@@ -784,7 +784,7 @@
 <p><a href="mailto:aa2894@njit.edu">Work Email</a><br /></p>
 <p><a href="mailto:aatulanurag@gmail.com">Personal Email</a></p>
 <p align="center"><b>Office Location</b></p> 
-<p>Office 105, Cullimore Hall,<br />
+<p><a href="https://maps.app.goo.gl/L7JAsXgcsmoz4rbj7" target="_blank" rel="noopener">Office 105, Cullimore Hall</a>,<br />
 <a href="https://archlib.njit.edu/cullimore-hall" target="_blank" rel="noopener">New Jersey Institute of Technology</a>,<br />
 323 M.L.K. Boulevard, University Heights,<br />
 Newark, New Jersey 07102 USA</p>
