--- a/public/index.html
+++ b/public/index.html
@@ -1068,7 +1068,7 @@
     <div class="pt-2 justify-content-center prose prose-slate dark:prose-invert">
       <div class="bio-text" >
         <h2 id="about-me">About Me</h2>
-<p>I obtained a Bachelor’s degree in mathematics from <a href="https://ramjas.du.ac.in/college/web/index.php?r=department/department-of-mathematics" style="text-decoration: none; color: blue;">Ramjas College, University of Delhi</a>, and a Master’s degree in applied mathematics from <a href="https://www.nitw.ac.in/math" style="text-decoration: none; color: blue;">National Institute of Technology, Warangal, Telangana</a>. I am currently a fifth-year Ph.D. Mathematics Candidate in the mathematics department at the <a href="https://math.njit.edu" style="text-decoration: none; color: blue;">Department of Mathematical Sciences, New Jersey Institute of Technology</a>. My advisor here is <a href="https://roygoodman.net" style="text-decoration: none; color: blue;">Dr. Roy Goodman</a>.</p>
+<p>I obtained a Bachelor’s degree in mathematics from <a href="https://ramjas.du.ac.in/college/web/index.php?r=department/department-of-mathematics" style="text-decoration: none; color: red;">Ramjas College, University of Delhi</a>, and a Master’s degree in applied mathematics from <a href="https://www.nitw.ac.in/math" style="text-decoration: none; color: blue;">National Institute of Technology, Warangal, Telangana</a>. I am currently a fifth-year Ph.D. Mathematics Candidate in the mathematics department at the <a href="https://math.njit.edu" style="text-decoration: none; color: blue;">Department of Mathematical Sciences, New Jersey Institute of Technology</a>. My advisor here is <a href="https://roygoodman.net" style="text-decoration: none; color: blue;">Dr. Roy Goodman</a>.</p>
 
       </div>
     </div>
