--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -784,8 +784,8 @@
 <p><a href="mailto:aa2894@njit.edu">Work Email</a><br /></p>
 <p><a href="mailto:aatulanurag@gmail.com">Personal Email</a></p>
 <p align="center"><b>Office Location</b></p> 
-<p><a href="https://maps.app.goo.gl/L7JAsXgcsmoz4rbj7" style="text-decoration: none;">Office 105, Cullimore Hall</a>,<br />
-<a href="https://archlib.njit.edu/cullimore-hall" style="text-decoration: none;">New Jersey Institute of Technology</a>,<br />
+<p>&lt;a href=&ldquo;<a href="https://maps.app.goo.gl/L7JAsXgcsmoz4rbj7%22" target="_blank" rel="noopener">https://maps.app.goo.gl/L7JAsXgcsmoz4rbj7"</a> style=&ldquo;text-decoration: none;color: blue;&gt;Office 105, Cullimore Hall</a>,<br />
+&lt;a href=&ldquo;<a href="https://archlib.njit.edu/cullimore-hall%22" target="_blank" rel="noopener">https://archlib.njit.edu/cullimore-hall"</a> style=&ldquo;text-decoration: none;color: blue;&gt;New Jersey Institute of Technology</a>,<br />
 323 M.L.K. Boulevard, University Heights,<br />
 Newark, New Jersey 07102 USA</p>
 
