--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -781,8 +781,8 @@
   <article class="prose prose-slate lg:prose-xl dark:prose-invert">
     <h1 class="lg:text-6xl">Contact</h1>
     <p>You can reach out via email. Here are my emails:<br /></p>
-<p><a href="mailto:aa2894@njit.edu">Work Email</a><br /></p>
-<p><a href="mailto:aatulanurag@gmail.com">Personal Email</a></p>
+<p><a href="mailto:aa2894@njit.edu" style="text-decoration: none; color: blue;">Work Email</a><br />
+<a href="mailto:aatulanurag@gmail.com" style="text-decoration: none; color: blue;">Personal Email</a></p>
 <p align="center"><b>Office Location</b></p> 
 <p><a href="https://maps.app.goo.gl/L7JAsXgcsmoz4rbj7" style="text-decoration: none; color: blue;">Office 105, Cullimore Hall</a>,<br />
 <a href="https://archlib.njit.edu/cullimore-hall" style="text-decoration: none; color: blue;">New Jersey Institute of Technology</a>,<br />
