--- a/public/index.html
+++ b/public/index.html
@@ -881,7 +881,7 @@
 
 
 <section id="section-resume-biography-3" class="relative hbb-section blox-resume-biography-3  auto" style="padding: 1rem 0 1rem 0;" >
- <div class="home-section-bg  bg-image" style="background-color: auto;filter: brightness(auto);">
+ <div class="home-section-bg  bg-image" style="background-color: blue;filter: brightness(auto);">
    
  </div>
   
