--- a/public/teaching/math-112/index.html
+++ b/public/teaching/math-112/index.html
@@ -784,7 +784,9 @@
 <p>My solutions to the previous exams on Calculus II can be found here: <a href="CalculusII.pdf">Calculus II</a>.</p>
 <p>As a recitation leader, I used to assign practice problems every week, which can be found below.<br /></p>
 <p align="center"><b>Week I</b></p>
-<p><a href="Problem-Set-I.pdf">Practice Set I</a>.</p>
+<div style="text-align: center;">
+    <a href="Problem-Set-I.pdf">Practice Set I</a>
+</div>
 <p align="center"><b>Week II</b></p>
 <p><a href="Problem-Set-II.pdf">Practice Set II</a>.</p>
 <p align="center"><b>Week III</b></p>
