--- a/public/teaching/math-112/index.html
+++ b/public/teaching/math-112/index.html
@@ -788,21 +788,37 @@
     <a href="Problem-Set-I.pdf">Practice Set I</a>
 </div>
 <p align="center"><b>Week II</b></p>
-<p><a href="Problem-Set-II.pdf">Practice Set II</a>.</p>
+<div style="text-align: center;">
+    <a href="Problem-Set-II.pdf">Practice Set II</a>
+</div>
 <p align="center"><b>Week III</b></p>
-<p><a href="Problem-Set-III.pdf">Practice Set III</a>.</p>
+<div style="text-align: center;">
+    <a href="Problem-Set-III.pdf">Practice Set III</a>
+</div>
 <p align="center"><b>Week IV</b></p>
-<p><a href="Problem-Set-IV.pdf">Practice Set IV</a>.</p>
+<div style="text-align: center;">
+    <a href="Problem-Set-IV.pdf">Practice Set IV</a>
+</div>
 <p align="center"><b>Week V</b></p>
-<p><a href="Problem-Set-V.pdf">Practice Set V</a>.</p>
+<div style="text-align: center;">
+    <a href="Problem-Set-V.pdf">Practice Set V</a>
+</div>
 <p align="center"><b>Week VI</b></p>
-<p><a href="Problem-Set-VI.pdf">Practice Set VI</a>.</p>
+<div style="text-align: center;">
+    <a href="Problem-Set-VI.pdf">Practice Set VI</a>
+</div>
 <p align="center"><b>Week VII</b></p>
-<p><a href="Problem-Set-VII.pdf">Practice Set VII</a>.</p>
+<div style="text-align: center;">
+    <a href="Problem-Set-VII.pdf">Practice Set VII</a>
+</div>
 <p align="center"><b>Week VIII</b></p>
-<p><a href="Problem-Set-VIII.pdf">Practice Set VII</a>.</p>
+<div style="text-align: center;">
+    <a href="Problem-Set-VIII.pdf">Practice Set VIII</a>
+</div>
 <p align="center"><b>Week IX</b></p>
-<p><a href="Problem-Set-IX.pdf">Practice Set IX</a>.</p>
+<div style="text-align: center;">
+    <a href="Problem-Set-IX.pdf">Practice Set IX</a>
+</div>
 
   </article>
 </div>
