--- a/public/events/index.html
+++ b/public/events/index.html
@@ -821,13 +821,13 @@
 
     <a
       class="relative block aspect-video"
-      href="/events/siam-conference-on-nonlinear-waves-and-coherent/" >
+      href="/events/siam-nwcs-2024/" >
 
       <img alt="The Phase Space of the Three-Vortex Problem"
            class="object-fill transition-all"
            data-nimg="fill"
            decoding="async"
-           fetchpriority="high" height="540" loading="lazy" src="/events/siam-conference-on-nonlinear-waves-and-coherent/featured_hub15d30bd30ec5a6641723ceb7ef27d91_754108_dc670bd4d5db36d8bb0af9da7c36781e.webp"
+           fetchpriority="high" height="540" loading="lazy" src="/events/siam-nwcs-2024/featured_hub15d30bd30ec5a6641723ceb7ef27d91_754108_dc670bd4d5db36d8bb0af9da7c36781e.webp"
            style="position: absolute; height: 100%; width: 100%; inset: 0px; color: transparent;"
            width="960"></a>
   </div>
@@ -842,13 +842,13 @@
       </div>
       
       <h2 class="text-lg font-semibold leading-snug tracking-tight mt-2 dark:text-white"><a
-        href="/events/siam-conference-on-nonlinear-waves-and-coherent/" ><span
+        href="/events/siam-nwcs-2024/" ><span
         class="bg-gradient-to-r from-primary-200 to-primary-100 bg-[length:0px_10px] bg-left-bottom bg-no-repeat transition-[background-size] duration-500 hover:bg-[length:100%_3px] group-hover:bg-[length:100%_10px] dark:from-primary-800 dark:to-primary-900">The Phase Space of the Three-Vortex Problem
           </span></a>
       </h2>
       
       <div class="grow"><p class="mt-2 line-clamp-3 text-sm text-gray-500 dark:text-gray-400"><a
-        href="/events/siam-conference-on-nonlinear-waves-and-coherent/" >
+        href="/events/siam-nwcs-2024/" >
         </a></p>
       </div>
       <div class="flex-none">
