--- a/public/events/njit-math-summer-talk-2023/index.html
+++ b/public/events/njit-math-summer-talk-2023/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <!-- This site was created with Hugo Blox. https://hugoblox.com -->
-<!-- Last Published: June 24, 2024 --><html lang="en-us" dir="ltr"
+<!-- Last Published: June 26, 2024 --><html lang="en-us" dir="ltr"
       data-wc-theme-default="system">
   
 <head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=3488&amp;path=livereload" data-no-instant defer></script>
@@ -813,7 +813,7 @@
         <ul class="hb-sidebar-list"><li class="flex flex-col "><a
     class="hb-sidebar-custom-link
       text-gray-500 hover:bg-gray-100 hover:text-gray-900 dark:text-gray-300 dark:hover:bg-primary-800 dark:hover:text-gray-50"
-    href="/events/siam-conference-on-nonlinear-waves-and-coherent/"
+    href="/events/siam-nwcs-2024/"
     
   >The Phase Space of the Three-Vortex Problem
     </a>
